src/main/webapp/app/rating/rating.component.scss
.divContainer {
  display: flex;
  flex-direction: row;
  height: 900px;
  color: #ffffff;
}

.routeMenuContainer {
  background-color: #333;
  flex-basis: 30%;
  padding: 20px;
  display: flex;
  flex-direction: column;
  overflow-y: auto;
}

.form-control,
.form-group select {
  background-color: #555;
  border: 2px solid #777;
  border-radius: 4px;
  color: #ddd;
  padding: 10px;
  margin-bottom: 20px; /* Spacing between form fields */
}

.form-control::placeholder,
.form-group select::placeholder {
  /* Placeholder text style */
  color: #bbb;
}

.form-group label {
  margin-bottom: 5px;
  font-size: 1.1rem;
}

.tags-container {
  max-height: 200px;
  overflow-y: auto;
  background-color: #444;
  border: none;
  padding: 10px;
  margin-bottom: 20px;
  border-radius: 4px;
}

.form-check {
  margin-bottom: 15px;
}

.form-check-input {
  width: 20px;
  height: 20px;
  margin-right: 10px;
  vertical-align: middle;
}

.form-check-label {
  vertical-align: middle;
  font-size: 0.95rem;
}

.button,
.button-clear {
  width: 48%;
  border: none;
  padding: 12px 0;
  border-radius: 20px;
  color: white;
  font-weight: bold;
  cursor: pointer;
  transition: 0.3s ease;
}

.button {
  background-color: black;
}

.button-clear {
  background-color: black;
}

.button:hover,
.button-clear:hover {
  opacity: 0.85;
  background-color: grey;
}

.center-text {
  display: flex;
  justify-content: space-between;
  gap: 4%;
}

.mapContainer {
  flex-grow: 1;
  height: 900px;
  width: 70%;
}

#map {
  height: 900px;
}

#routeDescription {
  height: 100px; /* Adjusting the height specifically for the description textarea */
}

